--- a/clock/templates/clock/clock.html
+++ b/clock/templates/clock/clock.html
@@ -1,11 +1,36 @@
 {% extends "base.html" %}
 {% load static %}
+
 {% block title %}Horloge - Virtual Office{% endblock %}
+
 {% block content %}
 <div class="clock-container">
     <h2>Horloge</h2>
     <div id="clock-display">--:--:--</div>
+
+    <div class="controls">
+        <button id="toggle-chrono">Chronomètre</button>
+        <button id="toggle-timer">Minuteur</button>
+    </div>
+
+    <div id="chrono-container" class="hidden">
+        <h3>Chronomètre</h3>
+        <div id="chrono-display">00:00:00</div>
+        <button id="start-chrono">Démarrer</button>
+        <button id="stop-chrono">Arrêter</button>
+        <button id="reset-chrono">Réinitialiser</button>
+    </div>
+
+    <div id="timer-container" class="hidden">
+        <h3>Minuteur</h3>
+        <input type="number" id="timer-input" placeholder="Durée (minutes)" min="1">
+        <button id="start-timer">Démarrer</button>
+        <button id="stop-timer">Arrêter</button>
+        <button id="reset-timer">Réinitialiser</button>
+        <div id="timer-display">00:00</div>
+    </div>
 </div>
+
 <link rel="stylesheet" href="{% static 'css/clock.css' %}">
 <script src="{% static 'js/clock.js' %}"></script>
 {% endblock %}
