Add photo management app with models, views, and templates for photo upload and display

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/taskbar.css' %}">
     <link rel="stylesheet" href="{% static 'css/taskManager.css' %}">
     <link rel="stylesheet" href="{% static 'css/explorer.css' %}">
+    <link rel="stylesheet" href="{% static 'css/photo.css' %}">
 
     
 </head>
