--- a/gaming/templates/gaming/gaming.html
+++ b/gaming/templates/gaming/gaming.html
@@ -7,8 +7,9 @@
     <title>Gaming</title>
     <script src="{% static 'js/phaser.min.js' %}"></script>
     <script src="{% static 'js/gaming.js' %}" defer></script>
+    <link rel="stylesheet" href="{% static 'css/gaming.css' %}">
     <style>
-        body { margin: 0; overflow: hidden; }
+        body { margin: 0; overflow: hidden; background-color: black; }
         canvas { display: block; }
     </style>
 </head>
