corrections de bugs

--- a/musicplayer/templates/musicplayer/musicplayer.html
+++ b/musicplayer/templates/musicplayer/musicplayer.html
@@ -36,7 +36,7 @@
             {% endif %}
         </ul>
     {% else %}
-        <p class="welcome-message">Cherche une musique pour commencer 🎧</p>
+        <p class="welcome-message">Cherche une musique pour commencer</p>
     {% endif %}
 </div>
 
