--- a/news/templates/new/article_detail.html
+++ b/news/templates/new/article_detail.html
@@ -11,6 +11,8 @@
 
     <!-- Lien pour voir l'article original -->
     <a href="{{ article.url }}" class="btn btn-primary" target="_blank">Voir l'article original</a>
+    <!-- Bouton pour revenir aux recherches -->
+    <a href="{% url 'news' %}" class="btn btn-secondary mt-3">Revenir aux recherches</a>
 </div>
 
 <link rel="stylesheet" href="{% static 'css/newsapp.css' %}">
