modified:   static/css/startMenu.css 	modified:   static/js/desktop.js 	modified:   static/js/dragManager.js 	modified:   static/js/selectionManager.js

--- a/static/css/startMenu.css
+++ b/static/css/startMenu.css
@@ -105,3 +105,8 @@
   font-size: 16px;
   color: #fff;
 }
+
+#start-menu {
+  max-height: 400px; /* ajustez la hauteur maximum selon vos besoins */
+  overflow-y: auto;
+}
