--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -42,7 +42,7 @@
 </div>
 
 <script>
-  // Affiche le tooltip en "context menu" au focus de l'input et le cache au blur
+  // Affiche le tooltip en "context menu" au focus de l input et le cache au blur
   window.addEventListener('load', function() {
     const inputs = document.querySelectorAll('.form-group input');
     inputs.forEach(input => {
