--- a/static/css/calculator.css
+++ b/static/css/calculator.css
@@ -23,15 +23,14 @@ body {
     flex-direction: column;
     align-items: center;
     overflow: hidden;
-    padding: 20px; /* Ajout de padding pour un meilleur espacement */
+    padding: 20px;
 }
 
-/* Affichage du résultat */
 #result {
     width: 100%;
-    height: 100px; /* Ajustement de la taille pour s'adapter à la fenêtre */
+    height: 100px;
     text-align: right;
-    font-size: 3rem; /* Ajusté pour l'affichage */
+    font-size: 3rem;
     font-weight: 700;
     color: white;
     background: transparent;
@@ -41,21 +40,19 @@ body {
     padding: 10px;
 }
 
-/* Conteneur des boutons en grille */
 .button-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 10px;
     width: 100%;
-    height: calc(100% - 140px); /* Ajustement pour combler l'espace restant */
-    padding-bottom: 20px; /* Ajout de padding en bas pour éviter que les boutons soient collés */
+    height: calc(100% - 140px);
+    padding-bottom: 20px;
 }
 
-/* Style général des boutons */
 input[type="button"] {
-    width: 100%; /* Ajustement pour remplir la grille */
+    width: 100%; 
     height: 100%;
-    border-radius: 12px; /* Ajustement pour correspondre au style de la fenêtre */
+    border-radius: 12px;
     font-size: 1.8rem;
     font-weight: bold;
     border: none;
@@ -67,31 +64,26 @@ input[type="button"] {
     align-items: center;
 }
 
-/* Effet de clic */
 input[type="button"]:active {
     transform: scale(0.9);
 }
 
-/* Boutons de chiffres */
 input[type="button"]:not(#clear-button, [value="="], [value="+"], [value="-"], [value="x"], [value="/"]) {
     background-color: #333;
     color: white;
 }
 
-/* Boutons d'opérations */
 input[value="+"], input[value="-"], input[value="x"], input[value="/"], input[value="="] {
     background-color: #ff9500;
     color: white;
 }
 
-/* Bouton C */
 #clear-button {
     background-color: #a5a5a5;
     color: black;
 }
 
-/* Bouton zéro qui prend 2 colonnes */
 input[value="0"] {
     grid-column: span 2;
-    border-radius: 12px; /* Ajustement pour correspondre au style de la fenêtre */
+    border-radius: 12px;
 }
