--- a/static/css/musicplayer.css
+++ b/static/css/musicplayer.css
@@ -1,4 +1,3 @@
-/* ----- Général ----- */
 body {
     font-family: 'Poppins', sans-serif;
     color: #333;
@@ -7,7 +6,6 @@ body {
     padding: 0;
 }
 
-/* ----- Conteneur principal ----- */
 .container {
     max-width: 600px;
     margin: 50px auto;
@@ -17,7 +15,6 @@ body {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-/* ----- Titre ----- */
 .title {
     font-size: 2rem;
     font-weight: 600;
@@ -25,7 +22,6 @@ body {
     margin-bottom: 20px;
 }
 
-/* ----- Barre de recherche ----- */
 .search-form {
     display: flex;
     justify-content: center;
@@ -69,16 +65,15 @@ body {
     background: #b80d0d;
 }
 
-/* ----- Liste des musiques ----- */
 .track-list {
     list-style: none;
     padding: 0;
     margin: 20px 0;
-    max-height: calc(100vh - 200px); /* Ajusté pour s'assurer que le scrolling fonctionne */
+    max-height: calc(100vh - 200px); 
     overflow-y: auto;
     padding-right: 10px;
-    overflow-x: hidden; /* Ajouté pour éviter le dépassement horizontal */
-    padding-left: 10px; /* Ajouté pour permettre le hover */
+    overflow-x: hidden; 
+    padding-left: 10px; 
 }
 
 .track-item {
@@ -90,7 +85,7 @@ body {
     margin-bottom: 12px;
     transition: background 0.3s, transform 0.2s;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: calc(100% - 20px); /* Ajusté pour permettre le hover */
+    max-width: calc(100% - 20px);
 }
 
 .track-item:hover {
@@ -121,7 +116,6 @@ body {
     color: #777;
 }
 
-/* ----- Bouton Play ----- */
 .play-button {
     background: #e50914;
     border: none;
@@ -138,7 +132,6 @@ body {
     transform: scale(1.1);
 }
 
-/* ----- Lecteur audio en bas ----- */
 .custom-audio-player {
     position: fixed;
     bottom: 10px;
@@ -153,10 +146,9 @@ body {
     justify-content: space-between;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-    overflow: hidden; /* Ajouté pour éviter le dépassement */
+    overflow: hidden;
 }
 
-/* ----- Barre de progression ----- */
 .progress-container {
     flex: 1;
     height: 5px;
@@ -180,13 +172,11 @@ body {
     transition: width 0.2s;
 }
 
-/* ----- Volume ----- */
 #volume-slider {
     width: 60px;
     cursor: pointer;
 }
 
-/* ----- Scrollbar Personnalisée ----- */
 .track-list::-webkit-scrollbar {
     width: 8px;
 }
@@ -200,8 +190,8 @@ body {
     background: #aaaaaa;
 }
 .track-item.playing {
-    background: #ffdddd; /* Rouge clair */
-    border-left: 5px solid #e50914; /* Accent rouge */
+    background: #ffdddd;
+    border-left: 5px solid #e50914;
     transition: background 0.3s ease;
 }
 
